--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,9 @@
 {
-  "presets": [
-    "babel-preset-expo",
-    "react-native"
-  ],
+  "presets": ["babel-preset-expo","react-native"],
   "sourceMaps": true,
   "env": {
     "development": {
-      "plugins": [
-        "transform-react-jsx-source"
-      ]
+      "plugins": ["transform-react-jsx-source"]
     }
   }
 }
