--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "pw01",
+    "name": "ARK_APP",
     "description": "An empty new project",
-    "slug": "pw01",
+    "slug": "ARK_APP",
     "privacy": "public",
     "sdkVersion": "18.0.0",
     "version": "1.0.0",
