--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
     "axios": "^0.16.1",
-    "react-native-elements": "^0.11.0",
-    "react-navigation": "git+https://github.com/react-community/react-navigation.git#7edd9a7",
     "expo": "^18.0.4",
     "react": "16.0.0-alpha.12",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-18.0.1.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-18.0.1.tar.gz",
+    "react-native-elements": "^0.11.0",
+    "react-native-flexi-radio-button": "^0.2.1",
+    "react-navigation": "git+https://github.com/react-community/react-navigation.git#7edd9a7"
   }
 }
