--- a/ios/ARK_APP/Info.plist
+++ b/ios/ARK_APP/Info.plist
@@ -43,14 +43,16 @@
 	<key>NSAppTransportSecurity</key>
 	<!--See http://ste.vn/2015/06/10/configuring-app-transport-security-ios-9-osx-10-11/ -->
 	<dict>
-		<key>NSExceptionDomains</key>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<!--key>NSExceptionDomains</key>
 		<dict>
-			<key>localhost</key>
+			<key>www.rongserver.com</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
 			</dict>
-		</dict>
+		</dict-->
 	</dict>
 </dict>
 </plist>
