--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "pw01",
-  "version": "0.0.0",
-  "description": "Hello Expo!",
-  "author": null,
+  "name": "ARK_APP",
+  "version": "0.0.1",
   "private": true,
-  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
+  },
   "dependencies": {
-    "axios": "^0.16.1",
-    "expo": "^18.0.4",
     "react": "16.0.0-alpha.12",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-18.0.1.tar.gz",
-    "react-native-elements": "^0.11.0",
+    "react-native": "0.46.1",
+    "react-native-elements": "^0.13.0",
     "react-native-flexi-radio-button": "^0.2.1",
-    "react-navigation": "git+https://github.com/react-community/react-navigation.git#7edd9a7"
+    "react-native-vector-icons": "^4.2.0",
+    "react-navigation": "^1.0.0-beta.11"
+  },
+  "devDependencies": {
+    "babel-jest": "20.0.3",
+    "babel-preset-react-native": "2.1.0",
+    "jest": "20.0.4",
+    "react-test-renderer": "16.0.0-alpha.12"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
