--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-18.0.1.tar.gz",
     "react-native-elements": "^0.11.0",
     "react-native-flexi-radio-button": "^0.2.1",
+    "react-native-segmented-control": "^1.0.0",
+    "react-native-svg-uri": "^1.2.0",
     "react-navigation": "git+https://github.com/react-community/react-navigation.git#7edd9a7"
   }
 }
