--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "moment": "^2.18.1",
     "react": "16.0.0-alpha.12",
     "react-native": "0.46.1",
     "react-native-elements": "^0.14.0",
     "react-native-flexi-radio-button": "^0.2.1",
     "react-native-segmented-control": "^1.0.0",
     "react-native-vector-icons": "^4.2.0",
-    "react-navigation": "git+https://github.com/react-community/react-navigation.git#7edd9a7"
+    "react-navigation": "git+https://github.com/react-community/react-navigation.git#7edd9a7",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
